--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <script defer src="script.js"></script>
-  <title>UPI QR Code! </title>
+  <title>#DXD </title>
 </head>
 <body>
   <div class="container">
